application/frontend/src/app.scss
* {
  box-sizing: border-box;
}

html,
body {
  height: 100%;
  width: 100%;
  margin: 0;
  padding: 0;
  overscroll-behavior-y: none;
}

html {
  text-size-adjust: 100%;
  background-color: white;
}

body {
  background-color: white;
  overflow: hidden;
}

#mount {
  height: 100%;
  width: 100%;
  overflow-y: auto;
  overflow-x: hidden;
  overscroll-behavior-y: none;

  scrollbar-color: #999999 white;

  &::-webkit-scrollbar {
    width: 6px;
  }

  &::-webkit-scrollbar-track {
    background: white;
  }

  &::-webkit-scrollbar-thumb {
    background-color: #999999;
    border-radius: 10px;
  }

  &::-webkit-scrollbar-thumb:hover {
    background-color: #777777;
  }
}

.app {
  min-height: 100%;
}

